popup now not visible until correct positioned

--- a/src/app/heldenbogen/mod-values/mod-values.component.sass
+++ b/src/app/heldenbogen/mod-values/mod-values.component.sass
@@ -12,7 +12,6 @@
   display: flex
   flex-flow: column
   justify-content: flex-start
-  height: 10vh
 
 
 .body
